Code Review Fixes (z-index + translation mistake)

--- a/front/styles/components/floating-button.scss
+++ b/front/styles/components/floating-button.scss
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 7%;
   left: calc(50% - 19px);
-  z-index: 2000;
+  z-index: 20;
   width: 42px;
   height: 42px;
   border: 3px solid $color-blue-green;
