--- a/front/styles/components/language-selector.scss
+++ b/front/styles/components/language-selector.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 1px;
   right: 0;
-  z-index: 800;
+  z-index: 8;
   height: 22px;
   margin: 0;
   padding: 0 10px;
