--- a/front/styles/components/loading-screen.scss
+++ b/front/styles/components/loading-screen.scss
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 5000;
+  z-index: 50;
   width: 100%;
   height: 100%;
   background: $color-white;
