--- a/front/styles/components/menu.scss
+++ b/front/styles/components/menu.scss
@@ -1,7 +1,7 @@
 .menu {
   position: fixed;
   top: 0%;
-  z-index: 900;
+  z-index: 9;
   width: 100%;
   height: 100%;
   background: linear-gradient($color-invisible, $color-transparent);
