--- a/front/styles/components/overlay.scss
+++ b/front/styles/components/overlay.scss
@@ -1,7 +1,7 @@
 .overlay {
   position: absolute;
   top: 0;
-  z-index: 1000;
+  z-index: 10;
   width: 100%;
   height: 100%;
   margin-bottom: 50px;
@@ -9,7 +9,7 @@
 
   &--modal {
     position: fixed;
-    z-index: 5000;
+    z-index: 30;
 
     .overlay__data {
       margin-bottom: 0;
@@ -28,7 +28,7 @@
   &__data {
     flex: 1;
     position: relative;
-    z-index: 100;
+    z-index: 1;
     margin-bottom: 100px;
     text-align: center;
     align-self: center;
